[package]
name = "stake"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "stake"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.22.1", features = ["init-if-needed"]}
anchor-spl = "0.22.1"
spl-token = { version = "3.3.0", features = ["no-entrypoint"] }
num-traits = "0.2"
ve_honey = { path = "../ve_honey", features = ["cpi"], version = "0.1" }
vipers = "^2.0"
