[package]
name = "stake"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "stake"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = ">=0.22"
anchor-spl = ">=0.22"
spl-token = { version = "3.3.0", features = ["no-entrypoint"] }
num-traits = "0.2"
ve_honey = { path = "../ve_honey", features = ["cpi"], version = "0.1" }
vipers = "^2.0"
