[package]
name = "ve_honey"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "ve_honey"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.22.1", features = ["init-if-needed"] }
anchor-spl = "0.22.1"
bitflags = "1.3.2"
govern = { version = "^0.5", features = ["cpi"] }
num-traits = "0.2"
vipers = "^2.0"
